--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Buzzword Bingo</title>
+
+    <script>
+        window.BACKEND_HOST = "__BACKEND_HOST__";
+        window.BACKEND_PORT = "__BACKEND_PORT__";
+        window.BACKEND_PROTOCOL = "__BACKEND_PROTOCOL__";
+    </script>
   </head>
   <body>
     <noscript>
